          04-01-04  Bfo     F$UnLink returns ok, as long as module found
          04-01-04  Bfo     Assign rbf->lastPos & rbf->att also in case of root dir ("rename" directory cut bug)
    3.22  04-01-04  Bfo     Branch Tag V3_22 at Sourceforge.net
    -------------------

          04-01-04  Bfo     Changed to new version
    3.23  04-??-??  Bfo
    -------------------    
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    !!  "show" is using some unimplemented FPU calls.
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   Mouse movements on XServer (Mac) still slow and jumpy.
    -   MGP slow startup problems (NT 4.0).
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (-)  'pragma unused' not possible with gcc (Linux): cuts the file there !!
*/


/* To do: */
/*
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on linux (over network)
    -   inode support instead of file lists for Windows file access, at least faster lists
    -   CtrlC/CtrlE support for Linux not yet done
    -   Console echo off mode for Linux not implemented.
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree for Mac
    -   btree optimisation
    -   termcap support for the DOS window.
    -   fix the msnap mouse blocker problem.
    -   fix the "mmore" MGR scroll problem.
